k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipaflow
  namespace: pipaflow
  labels:
    app: pipaflow
spec:
  type: ClusterIP
  selector:
    app: pipaflow
  ports:
    - name: http
      port: 80
      targetPort: 80
